k8s/base/cloud-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-config
  template:
    metadata:
      labels:
        app: cloud-config
    spec:
      containers:
        - name: cloud-config
          image: ecommerce/cloud-config:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9296
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-config
  namespace: ecommerce
spec:
  selector:
    app: cloud-config
  ports:
    - port: 9296
      targetPort: 9296
  type: ClusterIP
