k8s/base/proxy-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-client
  template:
    metadata:
      labels:
        app: proxy-client
    spec:
      containers:
        - name: proxy-client
          image: ecommerce/proxy-client:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8900
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-client
spec:
  selector:
    app: proxy-client
  ports:
    - port: 8900
      targetPort: 8900
  type: ClusterIP
