k8s/base/service-discovery.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-discovery
  template:
    metadata:
      labels:
        app: service-discovery
    spec:
      containers:
        - name: service-discovery
          image: ecommerce/service-discovery:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: service-discovery
spec:
  selector:
    app: service-discovery
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
