k8s/base/shipping-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
        - name: shipping-service
          image: ecommerce/shipping-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8600
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping-service
  ports:
    - port: 8600
      targetPort: 8600
  type: ClusterIP
